src/obj-x86_64-pc-linux-gnu/dom/bindings/_cache/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterfaceOrMixin
Rule 4     Definition -> Namespace
Rule 5     Definition -> Partial
Rule 6     Definition -> Dictionary
Rule 7     Definition -> Exception
Rule 8     Definition -> Enum
Rule 9     Definition -> Typedef
Rule 10    Definition -> IncludesStatement
Rule 11    CallbackOrInterfaceOrMixin -> CALLBACK CallbackRestOrInterface
Rule 12    CallbackOrInterfaceOrMixin -> INTERFACE InterfaceOrMixin
Rule 13    CallbackRestOrInterface -> CallbackRest
Rule 14    CallbackRestOrInterface -> CallbackConstructorRest
Rule 15    CallbackRestOrInterface -> CallbackInterface
Rule 16    InterfaceOrMixin -> InterfaceRest
Rule 17    InterfaceOrMixin -> MixinRest
Rule 18    CallbackInterface -> INTERFACE InterfaceRest
Rule 19    InterfaceRest -> IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 20    InterfaceRest -> IDENTIFIER SEMICOLON
Rule 21    MixinRest -> MIXIN IDENTIFIER LBRACE MixinMembers RBRACE SEMICOLON
Rule 22    Namespace -> NAMESPACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 23    Partial -> PARTIAL PartialDefinition
Rule 24    PartialDefinition -> INTERFACE PartialInterfaceOrPartialMixin
Rule 25    PartialDefinition -> PartialNamespace
Rule 26    PartialDefinition -> PartialDictionary
Rule 27    PartialInterfaceOrPartialMixin -> PartialInterfaceRest
Rule 28    PartialInterfaceOrPartialMixin -> PartialMixinRest
Rule 29    PartialInterfaceRest -> IDENTIFIER LBRACE PartialInterfaceMembers RBRACE SEMICOLON
Rule 30    PartialMixinRest -> MIXIN IDENTIFIER LBRACE MixinMembers RBRACE SEMICOLON
Rule 31    PartialNamespace -> NAMESPACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 32    PartialDictionary -> DICTIONARY IDENTIFIER LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 33    Inheritance -> COLON ScopedName
Rule 34    Inheritance -> <empty>
Rule 35    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 36    InterfaceMembers -> <empty>
Rule 37    InterfaceMember -> PartialInterfaceMember
Rule 38    InterfaceMember -> Constructor
Rule 39    Constructor -> CONSTRUCTOR LPAREN ArgumentList RPAREN SEMICOLON
Rule 40    PartialInterfaceMembers -> ExtendedAttributeList PartialInterfaceMember PartialInterfaceMembers
Rule 41    PartialInterfaceMembers -> <empty>
Rule 42    PartialInterfaceMember -> Const
Rule 43    PartialInterfaceMember -> AttributeOrOperationOrMaplikeOrSetlikeOrIterable
Rule 44    MixinMembers -> <empty>
Rule 45    MixinMembers -> ExtendedAttributeList MixinMember MixinMembers
Rule 46    MixinMember -> Const
Rule 47    MixinMember -> Attribute
Rule 48    MixinMember -> Operation
Rule 49    Dictionary -> DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 50    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 51    DictionaryMembers -> <empty>
Rule 52    DictionaryMember -> REQUIRED TypeWithExtendedAttributes IDENTIFIER SEMICOLON
Rule 53    DictionaryMember -> Type IDENTIFIER Default SEMICOLON
Rule 54    Default -> EQUALS DefaultValue
Rule 55    Default -> <empty>
Rule 56    DefaultValue -> ConstValue
Rule 57    DefaultValue -> LBRACKET RBRACKET
Rule 58    DefaultValue -> LBRACE RBRACE
Rule 59    DefaultValue -> NULL
Rule 60    Exception -> EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
Rule 61    Enum -> ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
Rule 62    EnumValueList -> STRING EnumValueListComma
Rule 63    EnumValueListComma -> COMMA EnumValueListString
Rule 64    EnumValueListComma -> <empty>
Rule 65    EnumValueListString -> STRING EnumValueListComma
Rule 66    EnumValueListString -> <empty>
Rule 67    CallbackRest -> IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 68    CallbackConstructorRest -> CONSTRUCTOR IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 69    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 70    ExceptionMembers -> <empty>
Rule 71    Typedef -> TYPEDEF TypeWithExtendedAttributes IDENTIFIER SEMICOLON
Rule 72    IncludesStatement -> ScopedName INCLUDES ScopedName SEMICOLON
Rule 73    Const -> CONST ConstType IDENTIFIER EQUALS ConstValue SEMICOLON
Rule 74    ConstValue -> BooleanLiteral
Rule 75    ConstValue -> INTEGER
Rule 76    ConstValue -> FLOATLITERAL
Rule 77    ConstValue -> STRING
Rule 78    BooleanLiteral -> TRUE
Rule 79    BooleanLiteral -> FALSE
Rule 80    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Attribute
Rule 81    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Maplike
Rule 82    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Setlike
Rule 83    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Iterable
Rule 84    AttributeOrOperationOrMaplikeOrSetlikeOrIterable -> Operation
Rule 85    Iterable -> ITERABLE LT TypeWithExtendedAttributes GT SEMICOLON
Rule 86    Iterable -> ITERABLE LT TypeWithExtendedAttributes COMMA TypeWithExtendedAttributes GT SEMICOLON
Rule 87    Setlike -> ReadOnly SETLIKE LT TypeWithExtendedAttributes GT SEMICOLON
Rule 88    Maplike -> ReadOnly MAPLIKE LT TypeWithExtendedAttributes COMMA TypeWithExtendedAttributes GT SEMICOLON
Rule 89    Attribute -> Qualifier AttributeRest
Rule 90    Attribute -> INHERIT AttributeRest
Rule 91    Attribute -> AttributeRest
Rule 92    AttributeRest -> ReadOnly ATTRIBUTE TypeWithExtendedAttributes AttributeName SEMICOLON
Rule 93    ReadOnly -> READONLY
Rule 94    ReadOnly -> <empty>
Rule 95    Operation -> Qualifiers OperationRest
Rule 96    Operation -> STRINGIFIER SEMICOLON
Rule 97    Qualifier -> STATIC
Rule 98    Qualifier -> STRINGIFIER
Rule 99    Qualifiers -> Qualifier
Rule 100   Qualifiers -> Specials
Rule 101   Specials -> Special Specials
Rule 102   Specials -> <empty>
Rule 103   Special -> GETTER
Rule 104   Special -> SETTER
Rule 105   Special -> DELETER
Rule 106   Special -> LEGACYCALLER
Rule 107   OperationRest -> ReturnType OptionalIdentifier LPAREN ArgumentList RPAREN SEMICOLON
Rule 108   OptionalIdentifier -> IDENTIFIER
Rule 109   OptionalIdentifier -> <empty>
Rule 110   ArgumentList -> Argument Arguments
Rule 111   ArgumentList -> <empty>
Rule 112   Arguments -> COMMA Argument Arguments
Rule 113   Arguments -> <empty>
Rule 114   Argument -> ExtendedAttributeList ArgumentRest
Rule 115   ArgumentRest -> OPTIONAL TypeWithExtendedAttributes ArgumentName Default
Rule 116   ArgumentRest -> Type Ellipsis ArgumentName
Rule 117   ArgumentName -> IDENTIFIER
Rule 118   ArgumentName -> ArgumentNameKeyword
Rule 119   ArgumentNameKeyword -> ASYNC
Rule 120   ArgumentNameKeyword -> ATTRIBUTE
Rule 121   ArgumentNameKeyword -> CALLBACK
Rule 122   ArgumentNameKeyword -> CONST
Rule 123   ArgumentNameKeyword -> CONSTRUCTOR
Rule 124   ArgumentNameKeyword -> DELETER
Rule 125   ArgumentNameKeyword -> DICTIONARY
Rule 126   ArgumentNameKeyword -> ENUM
Rule 127   ArgumentNameKeyword -> EXCEPTION
Rule 128   ArgumentNameKeyword -> GETTER
Rule 129   ArgumentNameKeyword -> INCLUDES
Rule 130   ArgumentNameKeyword -> INHERIT
Rule 131   ArgumentNameKeyword -> INTERFACE
Rule 132   ArgumentNameKeyword -> ITERABLE
Rule 133   ArgumentNameKeyword -> LEGACYCALLER
Rule 134   ArgumentNameKeyword -> MAPLIKE
Rule 135   ArgumentNameKeyword -> MIXIN
Rule 136   ArgumentNameKeyword -> NAMESPACE
Rule 137   ArgumentNameKeyword -> PARTIAL
Rule 138   ArgumentNameKeyword -> READONLY
Rule 139   ArgumentNameKeyword -> REQUIRED
Rule 140   ArgumentNameKeyword -> SERIALIZER
Rule 141   ArgumentNameKeyword -> SETLIKE
Rule 142   ArgumentNameKeyword -> SETTER
Rule 143   ArgumentNameKeyword -> STATIC
Rule 144   ArgumentNameKeyword -> STRINGIFIER
Rule 145   ArgumentNameKeyword -> TYPEDEF
Rule 146   ArgumentNameKeyword -> UNRESTRICTED
Rule 147   AttributeName -> IDENTIFIER
Rule 148   AttributeName -> AttributeNameKeyword
Rule 149   AttributeNameKeyword -> ASYNC
Rule 150   AttributeNameKeyword -> REQUIRED
Rule 151   Ellipsis -> ELLIPSIS
Rule 152   Ellipsis -> <empty>
Rule 153   ExceptionMember -> Const
Rule 154   ExceptionMember -> ExceptionField
Rule 155   ExceptionField -> Type IDENTIFIER SEMICOLON
Rule 156   ExtendedAttributeList -> LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
Rule 157   ExtendedAttributeList -> <empty>
Rule 158   ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 159   ExtendedAttribute -> ExtendedAttributeArgList
Rule 160   ExtendedAttribute -> ExtendedAttributeIdent
Rule 161   ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 162   ExtendedAttribute -> ExtendedAttributeIdentList
Rule 163   ExtendedAttribute -> <empty>
Rule 164   ExtendedAttributes -> COMMA ExtendedAttribute ExtendedAttributes
Rule 165   ExtendedAttributes -> <empty>
Rule 166   Other -> INTEGER
Rule 167   Other -> FLOATLITERAL
Rule 168   Other -> IDENTIFIER
Rule 169   Other -> STRING
Rule 170   Other -> OTHER
Rule 171   Other -> ELLIPSIS
Rule 172   Other -> COLON
Rule 173   Other -> SCOPE
Rule 174   Other -> SEMICOLON
Rule 175   Other -> LT
Rule 176   Other -> EQUALS
Rule 177   Other -> GT
Rule 178   Other -> QUESTIONMARK
Rule 179   Other -> DOMSTRING
Rule 180   Other -> BYTESTRING
Rule 181   Other -> USVSTRING
Rule 182   Other -> UTF8STRING
Rule 183   Other -> JSSTRING
Rule 184   Other -> PROMISE
Rule 185   Other -> ANY
Rule 186   Other -> BOOLEAN
Rule 187   Other -> BYTE
Rule 188   Other -> DOUBLE
Rule 189   Other -> FALSE
Rule 190   Other -> FLOAT
Rule 191   Other -> LONG
Rule 192   Other -> NULL
Rule 193   Other -> OBJECT
Rule 194   Other -> OCTET
Rule 195   Other -> OR
Rule 196   Other -> OPTIONAL
Rule 197   Other -> RECORD
Rule 198   Other -> SEQUENCE
Rule 199   Other -> SHORT
Rule 200   Other -> SYMBOL
Rule 201   Other -> TRUE
Rule 202   Other -> UNSIGNED
Rule 203   Other -> VOID
Rule 204   Other -> ArgumentNameKeyword
Rule 205   OtherOrComma -> Other
Rule 206   OtherOrComma -> COMMA
Rule 207   Type -> SingleType
Rule 208   Type -> UnionType Null
Rule 209   TypeWithExtendedAttributes -> ExtendedAttributeList Type
Rule 210   SingleType -> DistinguishableType
Rule 211   SingleType -> ANY
Rule 212   SingleType -> PROMISE LT ReturnType GT
Rule 213   UnionType -> LPAREN UnionMemberType OR UnionMemberType UnionMemberTypes RPAREN
Rule 214   UnionMemberType -> ExtendedAttributeList DistinguishableType
Rule 215   UnionMemberType -> UnionType Null
Rule 216   UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 217   UnionMemberTypes -> <empty>
Rule 218   DistinguishableType -> PrimitiveType Null
Rule 219   DistinguishableType -> ARRAYBUFFER Null
Rule 220   DistinguishableType -> READABLESTREAM Null
Rule 221   DistinguishableType -> OBJECT Null
Rule 222   DistinguishableType -> StringType Null
Rule 223   DistinguishableType -> SEQUENCE LT TypeWithExtendedAttributes GT Null
Rule 224   DistinguishableType -> RECORD LT StringType COMMA TypeWithExtendedAttributes GT Null
Rule 225   DistinguishableType -> ScopedName Null
Rule 226   ConstType -> PrimitiveType
Rule 227   ConstType -> IDENTIFIER
Rule 228   PrimitiveType -> UnsignedIntegerType
Rule 229   PrimitiveType -> BOOLEAN
Rule 230   PrimitiveType -> BYTE
Rule 231   PrimitiveType -> OCTET
Rule 232   PrimitiveType -> FLOAT
Rule 233   PrimitiveType -> UNRESTRICTED FLOAT
Rule 234   PrimitiveType -> DOUBLE
Rule 235   PrimitiveType -> UNRESTRICTED DOUBLE
Rule 236   StringType -> BuiltinStringType
Rule 237   BuiltinStringType -> DOMSTRING
Rule 238   BuiltinStringType -> BYTESTRING
Rule 239   BuiltinStringType -> USVSTRING
Rule 240   BuiltinStringType -> UTF8STRING
Rule 241   BuiltinStringType -> JSSTRING
Rule 242   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 243   UnsignedIntegerType -> IntegerType
Rule 244   IntegerType -> SHORT
Rule 245   IntegerType -> LONG OptionalLong
Rule 246   OptionalLong -> LONG
Rule 247   OptionalLong -> <empty>
Rule 248   Null -> QUESTIONMARK
Rule 249   Null -> <empty>
Rule 250   ReturnType -> Type
Rule 251   ReturnType -> VOID
Rule 252   ScopedName -> AbsoluteScopedName
Rule 253   ScopedName -> RelativeScopedName
Rule 254   AbsoluteScopedName -> SCOPE IDENTIFIER ScopedNameParts
Rule 255   RelativeScopedName -> IDENTIFIER ScopedNameParts
Rule 256   ScopedNameParts -> SCOPE IDENTIFIER ScopedNameParts
Rule 257   ScopedNameParts -> <empty>
Rule 258   ExtendedAttributeNoArgs -> IDENTIFIER
Rule 259   ExtendedAttributeArgList -> IDENTIFIER LPAREN ArgumentList RPAREN
Rule 260   ExtendedAttributeIdent -> IDENTIFIER EQUALS STRING
Rule 261   ExtendedAttributeIdent -> IDENTIFIER EQUALS IDENTIFIER
Rule 262   ExtendedAttributeNamedArgList -> IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
Rule 263   ExtendedAttributeIdentList -> IDENTIFIER EQUALS LPAREN IdentifierList RPAREN
Rule 264   IdentifierList -> IDENTIFIER Identifiers
Rule 265   Identifiers -> COMMA IDENTIFIER Identifiers
Rule 266   Identifiers -> <empty>

Terminals, with rules where they appear

ANY                  : 185 211
ARRAYBUFFER          : 219
ASYNC                : 119 149
ATTRIBUTE            : 92 120
BOOLEAN              : 186 229
BYTE                 : 187 230
BYTESTRING           : 180 238
CALLBACK             : 11 121
COLON                : 33 172
COMMA                : 63 86 88 112 164 206 224 265
CONST                : 73 122
CONSTRUCTOR          : 39 68 123
DELETER              : 105 124
DICTIONARY           : 32 49 125
DOMSTRING            : 179 237
DOUBLE               : 188 234 235
ELLIPSIS             : 151 171
ENUM                 : 61 126
EQUALS               : 54 67 68 73 176 260 261 262 263
EXCEPTION            : 60 127
FALSE                : 79 189
FLOAT                : 190 232 233
FLOATLITERAL         : 76 167
GETTER               : 103 128
GT                   : 85 86 87 88 177 212 223 224
IDENTIFIER           : 19 20 21 22 29 30 31 32 49 52 53 60 61 67 68 71 73 108 117 147 155 168 227 254 255 256 258 259 260 261 261 262 262 263 264 265
INCLUDES             : 72 129
INHERIT              : 90 130
INTEGER              : 75 166
INTERFACE            : 12 18 24 131
ITERABLE             : 85 86 132
JSSTRING             : 183 241
LBRACE               : 19 21 22 29 30 31 32 49 58 60 61
LBRACKET             : 57 156
LEGACYCALLER         : 106 133
LONG                 : 191 245 246
LPAREN               : 39 67 68 107 213 259 262 263
LT                   : 85 86 87 88 175 212 223 224
MAPLIKE              : 88 134
MIXIN                : 21 30 135
NAMESPACE            : 22 31 136
NULL                 : 59 192
OBJECT               : 193 221
OCTET                : 194 231
OPTIONAL             : 115 196
OR                   : 195 213 216
OTHER                : 170
PARTIAL              : 23 137
PROMISE              : 184 212
QUESTIONMARK         : 178 248
RBRACE               : 19 21 22 29 30 31 32 49 58 60 61
RBRACKET             : 57 156
READABLESTREAM       : 220
READONLY             : 93 138
RECORD               : 197 224
REQUIRED             : 52 139 150
RPAREN               : 39 67 68 107 213 259 262 263
SCOPE                : 173 254 256
SEMICOLON            : 19 20 21 22 29 30 31 32 39 49 52 53 60 61 67 68 71 72 73 85 86 87 88 92 96 107 155 174
SEQUENCE             : 198 223
SERIALIZER           : 140
SETLIKE              : 87 141
SETTER               : 104 142
SHORT                : 199 244
STATIC               : 97 143
STRING               : 62 65 77 169 260
STRINGIFIER          : 96 98 144
SYMBOL               : 200
TRUE                 : 78 201
TYPEDEF              : 71 145
UNRESTRICTED         : 146 233 235
UNSIGNED             : 202 242
USVSTRING            : 181 239
UTF8STRING           : 182 240
VOID                 : 203 251
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AbsoluteScopedName   : 252
Argument             : 110 112
ArgumentList         : 39 67 68 107 259 262
ArgumentName         : 115 116
ArgumentNameKeyword  : 118 204
ArgumentRest         : 114
Arguments            : 110 112
Attribute            : 47 80
AttributeName        : 92
AttributeNameKeyword : 148
AttributeOrOperationOrMaplikeOrSetlikeOrIterable : 43
AttributeRest        : 89 90 91
BooleanLiteral       : 74
BuiltinStringType    : 236
CallbackConstructorRest : 14
CallbackInterface    : 15
CallbackOrInterfaceOrMixin : 3
CallbackRest         : 13
CallbackRestOrInterface : 11
Const                : 42 46 153
ConstType            : 73
ConstValue           : 56 73
Constructor          : 38
Default              : 53 115
DefaultValue         : 54
Definition           : 1
Definitions          : 1 0
Dictionary           : 6
DictionaryMember     : 50
DictionaryMembers    : 32 49 50
DistinguishableType  : 210 214
Ellipsis             : 116
Enum                 : 8
EnumValueList        : 61
EnumValueListComma   : 62 65
EnumValueListString  : 63
Exception            : 7
ExceptionField       : 154
ExceptionMember      : 69
ExceptionMembers     : 60 69
ExtendedAttribute    : 156 164
ExtendedAttributeArgList : 159
ExtendedAttributeIdent : 160
ExtendedAttributeIdentList : 162
ExtendedAttributeList : 1 35 40 45 50 69 114 209 214
ExtendedAttributeNamedArgList : 161
ExtendedAttributeNoArgs : 158
ExtendedAttributes   : 156 164
IdentifierList       : 263
Identifiers          : 264 265
IncludesStatement    : 10
Inheritance          : 19 49 60
IntegerType          : 242 243
InterfaceMember      : 35
InterfaceMembers     : 19 22 31 35
InterfaceOrMixin     : 12
InterfaceRest        : 16 18
Iterable             : 83
Maplike              : 81
MixinMember          : 45
MixinMembers         : 21 30 45
MixinRest            : 17
Namespace            : 4
Null                 : 208 215 218 219 220 221 222 223 224 225
Operation            : 48 84
OperationRest        : 95
OptionalIdentifier   : 107
OptionalLong         : 245
Other                : 205
OtherOrComma         : 
Partial              : 5
PartialDefinition    : 23
PartialDictionary    : 26
PartialInterfaceMember : 37 40
PartialInterfaceMembers : 29 40
PartialInterfaceOrPartialMixin : 24
PartialInterfaceRest : 27
PartialMixinRest     : 28
PartialNamespace     : 25
PrimitiveType        : 218 226
Qualifier            : 89 99
Qualifiers           : 95
ReadOnly             : 87 88 92
RelativeScopedName   : 253
ReturnType           : 67 68 107 212
ScopedName           : 33 72 72 225
ScopedNameParts      : 254 255 256
Setlike              : 82
SingleType           : 207
Special              : 101
Specials             : 100 101
StringType           : 222 224
Type                 : 53 116 155 209 250
TypeWithExtendedAttributes : 52 71 85 86 86 87 88 88 92 115 223 224
Typedef              : 9
UnionMemberType      : 213 213 216
UnionMemberTypes     : 213 216
UnionType            : 208 215
UnsignedIntegerType  : 228

Parsing method: LALR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (156) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (157) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 3
    CALLBACK        reduce using rule 157 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 157 (ExtendedAttributeList -> .)
    NAMESPACE       reduce using rule 157 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 157 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 157 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 157 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 157 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 157 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 157 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 157 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 1
    ExtendedAttributeList          shift and go to state 2

state 1

    (0) S' -> Definitions .



state 2

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterfaceOrMixin
    (4) Definition -> . Namespace
    (5) Definition -> . Partial
    (6) Definition -> . Dictionary
    (7) Definition -> . Exception
    (8) Definition -> . Enum
    (9) Definition -> . Typedef
    (10) Definition -> . IncludesStatement
    (11) CallbackOrInterfaceOrMixin -> . CALLBACK CallbackRestOrInterface
    (12) CallbackOrInterfaceOrMixin -> . INTERFACE InterfaceOrMixin
    (22) Namespace -> . NAMESPACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
    (23) Partial -> . PARTIAL PartialDefinition
    (49) Dictionary -> . DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
    (60) Exception -> . EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
    (61) Enum -> . ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
    (71) Typedef -> . TYPEDEF TypeWithExtendedAttributes IDENTIFIER SEMICOLON
    (72) IncludesStatement -> . ScopedName INCLUDES ScopedName SEMICOLON
    (252) ScopedName -> . AbsoluteScopedName
    (253) ScopedName -> . RelativeScopedName
    (254) AbsoluteScopedName -> . SCOPE IDENTIFIER ScopedNameParts
    (255) RelativeScopedName -> . IDENTIFIER ScopedNameParts

    CALLBACK        shift and go to state 13
    INTERFACE       shift and go to state 14
    NAMESPACE       shift and go to state 15
    PARTIAL         shift and go to state 17
    DICTIONARY      shift and go to state 18
    EXCEPTION       shift and go to state 19
    ENUM            shift and go to state 20
    TYPEDEF         shift and go to state 21
    SCOPE           shift and go to state 25
    IDENTIFIER      shift and go to state 16

    Definition                     shift and go to state 4
    CallbackOrInterfaceOrMixin     shift and go to state 5
    Namespace                      shift and go to state 6
    Partial                        shift and go to state 7
    Dictionary                     shift and go to state 8
    Exception                      shift and go to state 9
    Enum                           shift and go to state 10
    Typedef                        shift and go to state 11
    IncludesStatement              shift and go to state 12
    ScopedName                     shift and go to state 22
    AbsoluteScopedName             shift and go to state 23
    RelativeScopedName             shift and go to state 24

state 3

    (156) ExtendedAttributeList -> LBRACKET . ExtendedAttribute ExtendedAttributes RBRACKET
    (158) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (159) ExtendedAttribute -> . ExtendedAttributeArgList
    (160) ExtendedAttribute -> . ExtendedAttributeIdent
    (161) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (162) ExtendedAttribute -> . ExtendedAttributeIdentList
    (163) ExtendedAttribute -> .
    (258) ExtendedAttributeNoArgs -> . IDENTIFIER
    (259) ExtendedAttributeArgList -> . IDENTIFIER LPAREN ArgumentList RPAREN
    (260) ExtendedAttributeIdent -> . IDENTIFIER EQUALS STRING
    (261) ExtendedAttributeIdent -> . IDENTIFIER EQUALS IDENTIFIER
    (262) ExtendedAttributeNamedArgList -> . IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
    (263) ExtendedAttributeIdentList -> . IDENTIFIER EQUALS LPAREN IdentifierList RPAREN

    COMMA           reduce using rule 163 (ExtendedAttribute -> .)
    RBRACKET        reduce using rule 163 (ExtendedAttribute -> .)
    IDENTIFIER      shift and go to state 32

    ExtendedAttribute              shift and go to state 26
    ExtendedAttributeNoArgs        shift and go to state 27
    ExtendedAttributeArgList       shift and go to state 28
    ExtendedAttributeIdent         shift and go to state 29
    ExtendedAttributeNamedArgList  shift and go to state 30
    ExtendedAttributeIdentList     shift and go to state 31

state 4

    (1) Definitions -> ExtendedAttributeList Definition . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (156) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (157) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 3
    CALLBACK        reduce using rule 157 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 157 (ExtendedAttributeList -> .)
    NAMESPACE       reduce using rule 157 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 157 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 157 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 157 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 157 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 157 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 157 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 157 (ExtendedAttributeList -> .)

    ExtendedAttributeList          shift and go to state 2
    Definitions                    shift and go to state 33

state 5

    (3) Definition -> CallbackOrInterfaceOrMixin .

    LBRACKET        reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    NAMESPACE       reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    SCOPE           reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    IDENTIFIER      reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterfaceOrMixin .)


state 6

    (4) Definition -> Namespace .

    LBRACKET        reduce using rule 4 (Definition -> Namespace .)
    CALLBACK        reduce using rule 4 (Definition -> Namespace .)
    INTERFACE       reduce using rule 4 (Definition -> Namespace .)
    NAMESPACE       reduce using rule 4 (Definition -> Namespace .)
    PARTIAL         reduce using rule 4 (Definition -> Namespace .)
    DICTIONARY      reduce using rule 4 (Definition -> Namespace .)
    EXCEPTION       reduce using rule 4 (Definition -> Namespace .)
    ENUM            reduce using rule 4 (Definition -> Namespace .)
    TYPEDEF         reduce using rule 4 (Definition -> Namespace .)
    SCOPE           reduce using rule 4 (Definition -> Namespace .)
    IDENTIFIER      reduce using rule 4 (Definition -> Namespace .)
    $end            reduce using rule 4 (Definition -> Namespace .)


state 7

    (5) Definition -> Partial .

    LBRACKET        reduce using rule 5 (Definition -> Partial .)
    CALLBACK        reduce using rule 5 (Definition -> Partial .)
    INTERFACE       reduce using rule 5 (Definition -> Partial .)
    NAMESPACE       reduce using rule 5 (Definition -> Partial .)
    PARTIAL         reduce using rule 5 (Definition -> Partial .)
    DICTIONARY      reduce using rule 5 (Definition -> Partial .)
    EXCEPTION       reduce using rule 5 (Definition -> Partial .)
    ENUM            reduce using rule 5 (Definition -> Partial .)
    TYPEDEF         reduce using rule 5 (Definition -> Partial .)
    SCOPE           reduce using rule 5 (Definition -> Partial .)
    IDENTIFIER      reduce using rule 5 (Definition -> Partial .)
    $end            reduce using rule 5 (Definition -> Partial .)


state 8

    (6) Definition -> Dictionary .

    LBRACKET        reduce using rule 6 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 6 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 6 (Definition -> Dictionary .)
    NAMESPACE       reduce using rule 6 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 6 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 6 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 6 (Definition -> Dictionary .)
    ENUM            reduce using rule 6 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 6 (Definition -> Dictionary .)
    SCOPE           reduce using rule 6 (Definition -> Dictionary .)
    IDENTIFIER      reduce using rule 6 (Definition -> Dictionary .)
    $end            reduce using rule 6 (Definition -> Dictionary .)


state 9

    (7) Definition -> Exception .

    LBRACKET        reduce using rule 7 (Definition -> Exception .)
    CALLBACK        reduce using rule 7 (Definition -> Exception .)
    INTERFACE       reduce using rule 7 (Definition -> Exception .)
    NAMESPACE       reduce using rule 7 (Definition -> Exception .)
    PARTIAL         reduce using rule 7 (Definition -> Exception .)
    DICTIONARY      reduce using rule 7 (Definition -> Exception .)
    EXCEPTION       reduce using rule 7 (Definition -> Exception .)
    ENUM            reduce using rule 7 (Definition -> Exception .)
    TYPEDEF         reduce using rule 7 (Definition -> Exception .)
    SCOPE           reduce using rule 7 (Definition -> Exception .)
    IDENTIFIER      reduce using rule 7 (Definition -> Exception .)
    $end            reduce using rule 7 (Definition -> Exception .)


state 10

    (8) Definition -> Enum .
